--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -8,7 +8,12 @@
   font-size: 20px;
 }
 
-.footerContainer {
-  height: 75px;
-  background-color: rgb(205, 205, 205);
+.footerButtonLinks { 
+  background: none;
+	color: white;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
