--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -4,29 +4,30 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: 'rgba(0, 0, 0, .4';
+  background-color: rgba(0, 0, 0, .4);
 }
 
 .modal-container {
-  position: 'fixed';
-	top: '50%';
-	left: '50%';
-	transform: 'translate(-50%, -50%)';
+  position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1000;
-	max-width: '800px';
-	height: 'fit-content';
-	background-color: 'white';
-	padding: '50px';
-	overflow-x: 'auto';
-	overflow-y: 'hidden';
-	max-height: '80%';
+	max-width: 800px;
+	height: fit-content;
+	background-color: white;
+	padding: 50px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	max-height: 80%;
+  
 }
 
 .modal-closeButton {
     font-size: 20;
-    position: 'sticky';
+    position: sticky;
     top: 0;
-    transform: 'translate(100%, -100%)';
+    transform: translate(100%, -100%);
     cursor: pointer;
 }
 
